correctin spelling in portoflio css and adding styling to pre - wrap text

--- a/css/index.css
+++ b/css/index.css
@@ -301,8 +301,13 @@ input {
   font-size: 15px; }
 
 pre {
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
   background-color: #E0E0E0;
   margin: 0% 4% 3% 5%; }
+  @media screen and (max-width: 400px) {
+    pre {
+      width: 100%; } }
 
 footer {
   max-width: 68em;
